@@ -212,9 +212,9 @@ backstab_bow_penalty: yes
 skill_steal_type: yes
 
 // How many times you could try to steal from a mob.
-// Note: It helps to avoid stealing exploit on monstewrs with few rare items
-// 0..254 = number of tries +1
-skill_steal_max_tries: 15
+// Note: It helps to avoid stealing exploit on monsters with few rare items
+// Use 0 to disable (max allowed value is 255)
+skill_steal_max_tries: 0
 
 // Can Rogues plagiarize advanced job skills           
 // 0 = no restriction
